omsservices/src/main/java/normativeLanguageParser/NormativeLanguageParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. NormativeLanguageParser.java */
package normativeLanguageParser;
public class NormativeLanguageParser/*@bgen(jjtree)*/implements NormativeLanguageParserTreeConstants, NormativeLanguageParserConstants {/*@bgen(jjtree)*/
  protected JJTNormativeLanguageParserState jjtree = new JJTNormativeLanguageParserState();public static String myToString(SimpleNode parserResult) {
        if(parserResult.jjtGetValue()==null)
                return NormativeLanguageParserTreeConstants.jjtNodeName[parserResult.id];
        else
                return NormativeLanguageParserTreeConstants.jjtNodeName[parserResult.id]+":"+parserResult.jjtGetValue();
         }

  public static String myToString(String prefix, SimpleNode parserResult) { return prefix + myToString(parserResult); }

  /* Override this method if you want to customize how the node dumps
     out its children. */

  public static void PrintParserResult(String prefix,SimpleNode parserResult) {
    System.out.println(myToString(prefix,parserResult));
    if (parserResult.children != null) {
      for (int i = 0; i < parserResult.children.length; ++i) {
  SimpleNode n = (SimpleNode)parserResult.children[i];
  if (n != null) {
    PrintParserResult(prefix + " ",n);
  }
      }
    }}


  final public SimpleNode Norm() throws ParseException {
   /*@bgen(jjtree) Norm */
  SimpleNode jjtn000 = new SimpleNode(JJTNORM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeonticConcept();
      Entity();
      Action();
      if (jj_2_1(5)) {
        If();
      } else {
        ;
      }
      if (jj_2_2(5)) {
        TemporalSituation();
      } else {
        ;
      }
      if (jj_2_3(5)) {
        Sanction();
      } else {
        ;
      }
      if (jj_2_4(5)) {
        Reward();
      } else {
        ;
      }
      jj_consume_token(0);
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
                         {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void DeonticConcept() throws ParseException {
 /*@bgen(jjtree) DeonticConcept */
 SimpleNode jjtn000 = new SimpleNode(JJTDEONTICCONCEPT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(DEONTIC_CONCEPT);
                             jjtree.closeNodeScope(jjtn000, true);
                             jjtc000 = false;
                            jjtn000.jjtSetValue(t.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Entity() throws ParseException {
 /*@bgen(jjtree) Entity */
  SimpleNode jjtn000 = new SimpleNode(JJTENTITY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_5(5)) {
        AgentRoleUnit();
      } else if (jj_2_6(5)) {
        RoleUnit();
      } else if (jj_2_7(5)) {
        ID();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ID() throws ParseException {
 /*@bgen(jjtree) ID */
 SimpleNode jjtn000 = new SimpleNode(JJTID);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
               jjtn000.jjtSetValue(t.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void RoleUnit() throws ParseException {
 /*@bgen(jjtree) RoleUnit */
 SimpleNode jjtn000 = new SimpleNode(JJTROLEUNIT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      Role();
      jj_consume_token(GUION);
      Unit();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Role() throws ParseException {
 /*@bgen(jjtree) Role */
 SimpleNode jjtn000 = new SimpleNode(JJTROLE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_8(5)) {
        t = jj_consume_token(ID);
      } else if (jj_2_9(5)) {
        t = jj_consume_token(VARIABLE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                               jjtree.closeNodeScope(jjtn000, true);
                               jjtc000 = false;
                              jjtn000.jjtSetValue(t.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Unit() throws ParseException {
 /*@bgen(jjtree) Unit */
 SimpleNode jjtn000 = new SimpleNode(JJTUNIT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_10(5)) {
        t = jj_consume_token(ID);
      } else if (jj_2_11(5)) {
        t = jj_consume_token(VARIABLE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                               jjtree.closeNodeScope(jjtn000, true);
                               jjtc000 = false;
                              jjtn000.jjtSetValue(t.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void AgentRoleUnit() throws ParseException {
 /*@bgen(jjtree) AgentRoleUnit */
  SimpleNode jjtn000 = new SimpleNode(JJTAGENTROLEUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Agent();
      jj_consume_token(COLON);
      Role();
      jj_consume_token(GUION);
      Unit();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Agent() throws ParseException {
 /*@bgen(jjtree) Agent */
 SimpleNode jjtn000 = new SimpleNode(JJTAGENT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_12(5)) {
        t = jj_consume_token(ID);
      } else if (jj_2_13(5)) {
        t = jj_consume_token(VARIABLE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                               jjtree.closeNodeScope(jjtn000, true);
                               jjtc000 = false;
                              jjtn000.jjtSetValue(t.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Action() throws ParseException {
 /*@bgen(jjtree) Action */
 SimpleNode jjtn000 = new SimpleNode(JJTACTION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_14(5)) {
        Request();
      } else if (jj_2_15(5)) {
        Register();
      } else if (jj_2_16(5)) {
        Serve();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Request() throws ParseException {
 /*@bgen(jjtree) Request */
  SimpleNode jjtn000 = new SimpleNode(JJTREQUEST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(REQUEST);
      Service();
      if (jj_2_17(5)) {
        Message();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Register() throws ParseException {
 /*@bgen(jjtree) Register */
  SimpleNode jjtn000 = new SimpleNode(JJTREGISTER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(REGISTER);
      Service();
      Profile();
      if (jj_2_18(5)) {
        Process();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Serve() throws ParseException {
 /*@bgen(jjtree) Serve */
  SimpleNode jjtn000 = new SimpleNode(JJTSERVE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SERVE);
      Service();
      if (jj_2_19(5)) {
        Process();
      } else {
        ;
      }
      if (jj_2_20(5)) {
        Message();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Service() throws ParseException {
 /*@bgen(jjtree) Service */
 SimpleNode jjtn000 = new SimpleNode(JJTSERVICE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
         jjtree.closeNodeScope(jjtn000, true);
         jjtc000 = false;
        jjtn000.jjtSetValue(t.image);
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Message() throws ParseException {
 /*@bgen(jjtree) Message */
  SimpleNode jjtn000 = new SimpleNode(JJTMESSAGE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MESSAGE);
      jj_consume_token(LPAR);
      MessageInfo();
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Process() throws ParseException {
 /*@bgen(jjtree) Process */
 SimpleNode jjtn000 = new SimpleNode(JJTPROCESS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(PROCESS);
      ProcessDescription();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Profile() throws ParseException {
 /*@bgen(jjtree) Profile */
 SimpleNode jjtn000 = new SimpleNode(JJTPROFILE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(PROFILE);
      ProfileDescription();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ConditionExpression() throws ParseException {
 /*@bgen(jjtree) ConditionExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDITIONEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_21(5)) {
        Condition();
      } else if (jj_2_22(5)) {
        Not();
      } else if (jj_2_23(5)) {
        And();
      } else if (jj_2_24(5)) {
        Or();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void Not() throws ParseException {
 /*@bgen(jjtree) Not */
  SimpleNode jjtn000 = new SimpleNode(JJTNOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NOT);
      jj_consume_token(LPAR);
      Condition();
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void And() throws ParseException {
 /*@bgen(jjtree) And */
  SimpleNode jjtn000 = new SimpleNode(JJTAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LPAR);
      Condition();
      jj_consume_token(AND);
      ConditionExpression();
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Or() throws ParseException {
 /*@bgen(jjtree) Or */
  SimpleNode jjtn000 = new SimpleNode(JJTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LPAR);
      Condition();
      jj_consume_token(OR);
      ConditionExpression();
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Condition() throws ParseException {
 /*@bgen(jjtree) Condition */
 SimpleNode jjtn000 = new SimpleNode(JJTCONDITION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_25(5)) {
        Variant();
        t = jj_consume_token(OPERATOR);
        Variant();
                                         jjtree.closeNodeScope(jjtn000, true);
                                         jjtc000 = false;
                                        jjtn000.jjtSetValue(t.image);
      } else if (jj_2_26(5)) {
        t = jj_consume_token(NORMATIVE_RESULT);
        jj_consume_token(LPAR);
        NormID();
        jj_consume_token(RPAR);
                                                                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                                                                 jjtc000 = false;
                                                                                                                jjtn000.jjtSetValue(t.image);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void NormID() throws ParseException {
 /*@bgen(jjtree) NormID */
 SimpleNode jjtn000 = new SimpleNode(JJTNORMID);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
         jjtree.closeNodeScope(jjtn000, true);
         jjtc000 = false;
        jjtn000.jjtSetValue(t.image);
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Variant() throws ParseException {
 /*@bgen(jjtree) Variant */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIANT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_27(5)) {
        Atomic();
      } else if (jj_2_28(5)) {
        Formula();
      } else if (jj_2_29(5)) {
        Value();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Atomic() throws ParseException {
 /*@bgen(jjtree) Atomic */
  SimpleNode jjtn000 = new SimpleNode(JJTATOMIC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_30(5)) {
        IDVariable();
      } else if (jj_2_31(5)) {
        IDValue();
      } else if (jj_2_32(5)) {
        Variable();
      } else if (jj_2_33(5)) {
        ID();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
